--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ gen/
 .gradle/
 build/
 /*/build/
+gradle-wrapper.jar
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -25,3 +26,9 @@ proguard/
 
 # Log Files
 *.log
+
+# Development-specific files
+.idea/
+
+# API Keys
+google_maps_api.xml
