--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,6 @@ gen/
 .gradle/
 build/
 /*/build/
-gradle-wrapper.jar
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -31,4 +30,4 @@ proguard/
 .idea/
 
 # API Keys
-google_maps_api.xml
+# google_maps_api.xml
